# docs/api.yml
@@ -93,6 +93,92 @@ paths:
                 properties:
                   message:
                     type: string
+  /categories:
+    get:
+      summary: Returns a list of categories
+      parameters:
+        - in: query
+          name: page
+          schema:
+            type: number
+            description: the page number requesting the categories
+            example: 1
+        - in: query
+          name: limit
+          schema:
+            type: number
+            description: the maximum number of categories in the requested page, if it's not defined, the default is 3
+            example: 3
+      responses:
+        '200':
+          description: A JSON array of categories
+          content:
+            application/json:
+              schema: 
+                type: array
+                items: 
+                  $ref: '#/components/schemas/Category'
+        '400':
+          description: Indicates a bad request as a result of input validator error
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  message:
+                    type: string
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  message:
+                    type: string
+  /providers:
+    get:
+      summary: Returns a list of providers
+      parameters:
+        - in: query
+          name: page
+          schema:
+            type: number
+            description: the page number requesting the providers
+            example: 1
+        - in: query
+          name: limit
+          schema:
+            type: number
+            description: the maximum number of providers in the requested page, if it's not defined, the default is 3
+            example: 3
+      responses:
+        '200':
+          description: A JSON array of providers
+          content:
+            application/json:
+              schema: 
+                type: array
+                items: 
+                  $ref: '#/components/schemas/Provider'
+        '400':
+          description: Indicates a bad request as a result of input validator error
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  message:
+                    type: string
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  message:
+                    type: string
 components:
   schemas:
     Product:
@@ -100,7 +186,7 @@ components:
       properties:
         id:
           type: number
-        productName:
+        name:
           type: string
         imageURI:
           type: string
@@ -119,14 +205,14 @@ components:
       properties:
         id:
           type: number
-        categoryName:
+        name:
           type: string
     Provider:
       type: object
       properties:
         id:
           type: string
-        providerName:
+        name:
           type: string
           
     ProductProvider:
